--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,20 @@
             "email": "=jackhansard@gmail.com"
         }
     ],
-    "require": {
-        "codeless/jugglecode": "^1.0"
+    "autoload": {
+        "psr-4": {
+            "CodeInGame\\LegendsOfCodeMagic\\": "legends-of-code-magic/src"
+        }
     },
     "require-dev": {
         "phpunit/phpunit": "^8.2"
+    },
+    "require": {
+        "classpreloader/classpreloader": "^3.2",
+        "classpreloader/console": "^2.0",
+        "jasonlewis/resource-watcher": "^1.2"
+    },
+    "scripts": {
+        "watch": "php watcher.php"
     }
 }
