--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,11 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.2"
+        "phpunit/phpunit": "^8.2",
+        "phpmd/phpmd": "^2.6",
+        "phpunit/phpunit": "^7",
+        "squizlabs/php_codesniffer": "^3.3",
+        "overtrue/phplint": "^1.1"
     },
     "require": {
         "classpreloader/classpreloader": "^3.2",
@@ -24,6 +28,11 @@
         "jasonlewis/resource-watcher": "^1.2"
     },
     "scripts": {
-        "watch": "php watcher.php"
+        "watch": "php watcher.php",
+        "run-tests": "composer run-phpunit && composer run-phpcs && composer run-phpmd && composer run-phplint",
+        "run-phpcs": "vendor/bin/phpcs",
+        "run-phpmd": "vendor/bin/phpmd src text phpmd-src.xml --exclude src/Migrations/ && vendor/bin/phpmd tests text phpmd-tests.xml",
+        "run-phplint": "vendor/bin/phplint",
+        "run-phpunit": "vendor/bin/phpunit"
     }
 }
